added bootstrap changes

--- a/students/templates/create.html
+++ b/students/templates/create.html
@@ -1,68 +1,68 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method="POST" class="post-form" action="/update/{{student.id}}">
+<form method="POST" class="post-form" action="/stud">
   {% csrf_token %}
   <div class="container">
     <br>
     <div class="form-group row">
       <label class="col-sm-1 col-form-label"></label>
       <div class="col-sm-4">
-        <h3>Update Details</h3>
+        <h3>Enter Details</h3>
       </div>
     </div>
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Student Id:</label>
       <div class="col-sm-4">
-        <input type="text" name="id" id="id" readonly required maxlength="20" value="{{ student.id }}" />
+        {{ form.id }}
       </div>
     </div>
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Student Name:</label>
       <div class="col-sm-4">
-        <input type="text" name="name" id="name" required maxlength="100" value="{{ student.name }}" />
+        {{ form.name }}
       </div>
     </div>
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Student Email:</label>
       <div class="col-sm-4">
-        <input type="email" name="email" id="email" required maxlength="128" value="{{ student.email }}" />
+        {{ form.email }}
       </div>
     </div>
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Student Contact:</label>
+      <label class="col-sm-2 col-form-label">Student Phone:</label>
       <div class="col-sm-4">
-        <input type="text" name="phone" id="phone" required maxlength="15" value="{{ student.phone }}" />
+        {{ form.phone }}
       </div>
     </div>
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Student Gender:</label>
       <div class="col-sm-4">
-        <input type="text" name="gender" id="gender" required maxlength="10" value="{{ student.gender }}" />
+        {{ form.gender }}
       </div>
     </div>
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Student Age:</label>
       <div class="col-sm-4">
-        <input type="numbder" min="10" max="100" name="age" id="age" required maxlength="3" value="{{ student.age }}" />
+        {{ form.age }}
       </div>
     </div>
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Student Class:</label>
       <div class="col-sm-4">
-        <input type="text" name="standard" id="standard" required maxlength="5" value="{{ student.standard }}" />
+        {{ form.standard }}
       </div>
     </div>
     <div class="form-group row">
       <label class="col-sm-2 col-form-label">Student Address:</label>
       <div class="col-sm-4">
-        <input type="text" name="address" id="address" required maxlength="256" value="{{ student.address }}" />
+        {{ form.address }}
       </div>
     </div>
     <div class="form-group row">
       <label class="col-sm-1 col-form-label"></label>
       <div class="col-sm-4">
-        <button type="submit" class="btn btn-success">Update</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </div>
   </div>
