--- a/students/templates/show.html
+++ b/students/templates/show.html
@@ -1,46 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Students Records</title>
-     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 <table class="table table-striped table-bordered table-sm">
     <thead class="thead-dark">
-    <tr>
-        <th>Student ID</th>
-        <th>Student Name</th>
-        <th>Student Email</th>
-        <th>Student Phone</th>
-        <th>Student Age</th>
-        <th>Student Gender</th>
-        <th>Student Class</th>
-        <th>Student Address</th>
-    </tr>
+        <tr>
+            <th>Student ID</th>
+            <th>Student Name</th>
+            <th>Student Email</th>
+            <th>Student Phone</th>
+            <th>Student Age</th>
+            <th>Student Gender</th>
+            <th>Student Class</th>
+            <th>Student Address</th>
+            <th>Actions</th>
+        </tr>
     </thead>
     <tbody>
-{% for student in students %}
-    <tr>
-        <td>{{ student.id }}</td>
-        <td>{{ student.name }}</td>
-        <td>{{ student.email }}</td>
-        <td>{{ student.phone }}</td>
-        <td>{{ student.gender }}</td>
-        <td>{{ student.age }}</td>
-        <td>{{ student.standard }}</td>
-        <td>{{ student.address }}</td>
-        <td>
-            <a href="/edit/{{ student.id }}"><span class="glyphicon glyphicon-pencil" >Edit</span></a>
-            <a href="/delete/{{ student.id }}">Delete</a>
-        </td>
-    </tr>
-{% endfor %}
+        {% for student in students %}
+        <tr>
+            <td>{{ student.id }}</td>
+            <td>{{ student.name }}</td>
+            <td>{{ student.email }}</td>
+            <td>{{ student.phone }}</td>
+            <td>{{ student.gender }}</td>
+            <td>{{ student.age }}</td>
+            <td>{{ student.standard }}</td>
+            <td>{{ student.address }}</td>
+            <td>
+                <a href="/edit/{{ student.id }}"><span class="glyphicon glyphicon-pencil">Edit</span></a>
+                <a href="/delete/{{ student.id }}">Delete</a>
+            </td>
+        </tr>
+        {% endfor %}
     </tbody>
 </table>
 <br>
 <br>
 <center><a href="/stud" class="btn btn-primary">Add New Record</a></center>
-</body>
-</html>
+{% endblock %}
